<resources>
    <string name="app_name">Android-Bootcamp-2025-Frontend</string>
    <string name="page_title">Username</string>
    <string name="fab_content_desc">Example description</string>
    <string name="enter_login">Enter your login</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="refresh">Refresh</string>
    <string name="password">Enter password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign in</string>
    <string name="hello">Hello</string>
    <string name="button">Go</string>
    <string name="email">"Email "</string>
    <string name="infouser">About</string>
    <string name="phone">"Phone "</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="EditProfile">Edit my profile</string>
    <string name="INFO_user">Additional Information</string>
    <string name="name">"Your name "</string>
    <string name="volunteer_center_user">Your volunteer center</string>
    <string name="detach_department">"Detach from department "</string>
    <string name="attached_to_the_center">Attached to the center</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="auth">Auth</string>
    <string name="secret_btn_text">See all users</string>
    <string name="check_attached_people">Check attached people</string>
    <string name="image">Image</string>
    <string name="continue_">Continue</string>
    <string name="phone_template" translatable="false">+*(**)**-**-**</string>
    <string name="email_template" translatable="false">user@example.com</string>
</resources>