<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:background="?android:attr/colorBackground">

    <TextView
            android:textColor="?attr/colorOnBackground"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EditProfile"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp" />

    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp" />

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp" />

    <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:layout_marginBottom="10dp" />

    <EditText
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/INFO_user"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:layout_marginBottom="20dp" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:padding="12dp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/SaveChanges"
            android:textSize="18sp" />
</LinearLayout>