<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        tools:context=".MainActivity">

    <TextView
            android:background="?android:attr/colorBackground"
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="error"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_height="wrap_content" />

    <com.google.android.material.appbar.AppBarLayout
            android:background="?android:attr/colorBackground"
            android:id="@+id/main_abl"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:background="?android:attr/colorBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:expandedTitleTextAppearance="@style/myCTBStyle"
                app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_profile_login"
                    app:layout_collapseMode="parallax"
                    android:background="?android:attr/colorBackground" />

            <com.google.android.material.appbar.MaterialToolbar
                    android:layout_margin="3dp"
                    android:id="@+id/mtb_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/toolbar_menu"
                    app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:background="?android:attr/colorBackground"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_gravity="center_horizontal"
                android:id="@+id/cl_main"
                android:background="?android:attr/colorBackground"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:id="@+id/ctbl_main"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/page_title" />

            <TextView
                    android:id="@+id/phone_hint_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center" />

            <TextView
                    android:id="@+id/phone_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/phone_template"
                    android:textColor="?attr/colorSecondary"
                    android:layout_marginBottom="15dp" />

            <TextView
                    android:id="@+id/email_hint_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_marginBottom="5dp" />

            <TextView
                    android:id="@+id/email_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/email_template"
                    android:textColor="?attr/colorSecondary"
                    android:layout_marginBottom="15dp" />

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:text="@string/volunteer_center_user"
                    android:layout_marginBottom="5dp" />

            <TextView
                    android:id="@+id/department_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="?attr/colorSecondary"
                    android:text="DepartmentName"
                    android:layout_marginBottom="15dp" />

            <TextView
                    android:id="@+id/info_hint_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/infouser"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_marginBottom="15dp" />

            <TextView
                    android:id="@+id/info_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Info"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="?attr/colorSecondary"
                    android:layout_marginBottom="20dp" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/material_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/detach_department"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="13sp"
                    app:cornerRadius="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_main"
                    app:strokeColor="?attr/colorOnBackground"
                    app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/secret_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="16dp"
                    android:text="@string/secret_btn_text"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="13sp"
                    app:cornerRadius="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/material_button"
                    app:strokeColor="?attr/colorOnBackground"
                    app:strokeWidth="2dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/fab_content_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_anchorGravity="bottom|right"
            app:layout_anchor="@id/main_abl"
            app:tint="@color/white"
            app:srcCompat="@drawable/ic_photo" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>


