<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_graph"
        app:startDestination="@id/nav_auth">
    <fragment
            android:id="@+id/nav_auth"
            android:name="ru.sicampus.bootcamp2025.ui.auth.AuthFragment"
            android:label="@string/auth" >
        <action
                android:id="@+id/action_nav_auth_to_nav_profile"
                app:destination="@id/nav_profile" />
    </fragment>
    <fragment
            android:id="@+id/nav_map"
            android:name="ru.sicampus.bootcamp2025.ui.map.MapFragment"
            android:label="@string/map" >
        <action
            android:id="@+id/action_nav_map_to_nav_user_list"
            app:destination="@id/nav_user_list" />
    </fragment>
    <fragment
            android:id="@+id/nav_profile"
            android:name="ru.sicampus.bootcamp2025.ui.profile.ProfileFragment"
            android:label="@string/profile">
        <action
                android:id="@+id/action_nav_profile_to_nav_auth"
                app:destination="@id/nav_profile" />
        <action
                android:id="@+id/action_nav_auth_to_nav_auth"
                app:destination="@id/nav_auth" />
        <action
            android:id="@+id/action_nav_profile_to_nav_user_list"
            app:destination="@id/nav_user_list" />
    </fragment>

    <action
            android:id="@+id/action_nav_main_to_nav_map"
            app:destination="@id/nav_profile" />
    <action
            android:id="@+id/action_nav_main_to_nav_auth"
            app:destination="@id/nav_auth" />
    <fragment
        android:id="@+id/nav_user_list"
        android:name="ru.sicampus.bootcamp2025.ui.list.ListFragment"
        android:label="ListFragment" />

    <!--    -->
    <!--    <fragment-->
    <!--        android:id="@+id/profileFragment"-->
    <!--        android:name="ru.sicampus.bootcamp2025.ui.profile.ProfileFragment"-->
    <!--        android:label="ProfileFragment" />-->
    <!--    <fragment-->
    <!--        android:id="@+id/listFragment"-->
    <!--        android:name="ru.sicampus.bootcamp2025.ui.list.ListFragment"-->
    <!--        android:label="ListFragment" />-->
    <!--        <action-->
    <!--            android:id="@+id/action_loginFragment_to_profileFragment"-->
    <!--            app:destination="@id/profileFragment" />-->
    <!--    <fragment-->
    <!--        android:id="@+id/mapFragment"-->
    <!--        android:name="ru.sicampus.bootcamp2025.ui.map.MapFragment"-->
    <!--        android:label="MapFragment" />-->

</navigation>