<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="50dp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:foregroundGravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/logo_light"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:constraint_referenced_ids="title, login, password, next,error"
                app:flow_verticalGap="16dp"
                app:flow_verticalStyle="packed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:letterSpacing="0.05"
                    android:background="?android:attr/colorBackground"
                    android:textColor="?attr/colorOnBackground"
                    tools:text="@string/hello"
                    android:layout_marginBottom="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="?attr/colorOnBackground"
                    app:helperTextTextColor="?attr/colorOnBackground"
                    android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:hint="@string/enter_login"
                        android:textColorHint="?attr/colorSecondary"
                        android:textColor="?attr/colorSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="?attr/colorOnBackground"
                    app:helperTextTextColor="?attr/colorOnBackground"
                    android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:hint="@string/password"
                        android:textColorHint="?attr/colorSecondary"
                        android:textColor="?attr/colorSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue" />

            <TextView
                    android:visibility="gone"
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>