<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:background="?android:attr/colorBackground">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="16dp">


        <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/colorBackground"
                android:textColor="?attr/colorOnBackground"
                android:gravity="center"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Title" />

        <ImageView
                android:background="?android:attr/colorBackground"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/image"
                android:layout_margin="20dp"
                android:contentDescription="@string/image" />

        <TextView
                android:background="?android:attr/colorBackground"
                android:textColor="?attr/colorOnBackground"
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/placeholder_icon"
                tools:text="Address" />

        <TextView
                android:background="?android:attr/colorBackground"
                android:textColor="?attr/colorOnBackground"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/free_icon_inofo_13054421"
                tools:text="Information" />

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:id="@+id/attach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attached_to_the_center"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:padding="12dp"
                android:layout_margin="8dp"
                android:gravity="center" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/check_people"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_attached_people"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:padding="12dp"
                android:layout_margin="8dp"
                android:gravity="center" />


    </LinearLayout>
</ScrollView>